hphp/test/slow/reflection/ReflectionTypeAlias5.php.expectf
Fatal error: resolving type alias MyAlias failed. Have you declared all classes in the type alias in %s/ReflectionTypeAlias5.php on line 7